# Real-Time-ML-Inference-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
config/: development.yaml  production.yaml  prometheus.yaml  staging.yaml
docker/: .gitkeep
examples/: cache_aside_demo.py
k8s/: .gitkeep
scripts/: check_services.py  verify_setup.py
src/: __init__.py
src/common/: __init__.py  cache.py  config.py  feature_retrieval.py  models.py
src/drift_detector/: __init__.py
src/inference_service/: README.md  __init__.py  app.py
src/model_server/: README.md  __init__.py  __main__.py  app.py  config.py
terraform/: .gitkeep
tests/: __init__.py
tests/unit/: test_cache.py  test_config.py  test_feature_retrieval.py  test_inference_service_app.py  test_model_server_app.py  test_models.py
